--- a/Sns/src/main/webapp/WEB-INF/web.xml
+++ b/Sns/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+<web-app version="4.0" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
@@ -47,4 +47,8 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<welcome-file-list>
+	    <welcome-file>/WEB-INF/views/main/main.jsp</welcome-file>
+	</welcome-file-list>
+	
 </web-app>
